--- a/app/homepage.html
+++ b/app/homepage.html
@@ -30,70 +30,67 @@
 </head>
 <body>
 
-<div class="outerwrapper">
+<div class="container">
 	<!-- =header -->
     <header class="header">
+
+		<!-- =nav -->
+		<nav id="navbar" class="mainnav">
+			<div class="mainnav__list">
+				<ul class="nav nav-tabs mainnav">
+					<li class="folder"> 
+						<a href="#">Меню 1</a>
+						<div class="subnav">
+							<ul>
+								<li><a href="#">Меню 1</a></li>
+								<li><a href="#">Меню 2</a></li>
+								<li><a href="#">Меню 3</a></li>
+								<li><a href="#">Меню 4</a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="folder">
+						<a href="#">Меню 2</a>
+						<div class="subnav">
+							<ul>
+								<li><a href="#">Меню 1</a></li>
+								<li><a href="#">Меню 2</a></li>
+								<li><a href="#">Меню 3</a></li>
+								<li><a href="#">Меню 4</a></li>
+							</ul>
+						</div>
+					</li>
+					<li><a href="#">Меню 3</a></li>
+					<li><a href="#">Меню 4</a></li>
+					<li><a href="#">Меню 5</a></li>
+				</ul>
+				<div class="show-sm">
+					<a href="tel:+123456789">+1234 56-78-89</a>
+					<a href="mailto:info@transliftrus.ru">info@site.site</a>
+				</div>
+			</div>
+		</nav>
+
+		<button type="button" class="navbar-toggle" aria-label="Показать/Скрыть меню">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<button type="button" class="close-menu"><img src="/template/images/close.png" alt="Закрыть меню" /></button>
+		<!-- =/nav -->
+
 	</header>
 	<!-- =/header -->
 
-	<!-- =nav -->
-	<nav id="navbar" class="mainnav">
-		<div class="mainnav__list">
-			<ul class="nav nav-tabs mainnav">
-				<li class="folder"> 
-					<a href="#">Меню 1</a>
-					<div class="subnav">
-						<ul>
-							<li><a href="#">Меню 1</a></li>
-							<li><a href="#">Меню 2</a></li>
-							<li><a href="#">Меню 3</a></li>
-							<li><a href="#">Меню 4</a></li>
-						</ul>
-					</div>
-				</li>
-				<li class="folder">
-					<a href="#">Меню 2</a>
-					<div class="subnav">
-						<ul>
-							<li><a href="#">Меню 1</a></li>
-							<li><a href="#">Меню 2</a></li>
-							<li><a href="#">Меню 3</a></li>
-							<li><a href="#">Меню 4</a></li>
-						</ul>
-					</div>
-				</li>
-				<li><a href="#">Меню 3</a></li>
-				<li><a href="#">Меню 4</a></li>
-				<li><a href="#">Меню 5</a></li>
-			</ul>
-			<div class="show-sm">
-				<a href="tel:+123456789">+1234 56-78-89</a>
-				<a href="mailto:info@transliftrus.ru">info@site.site</a>
-			</div>
-		</div>
-	</nav>
 
-	<button type="button" class="navbar-toggle" aria-label="Показать/Скрыть меню">
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	</button>
-	<button type="button" class="close-menu"><img src="/template/images/close.png" alt="Закрыть меню" /></button>
-	<!-- =/nav -->
-
-    <div class="main">
-		Пароль отправляется серверу в «открытом» виде — он шифруется известным алгоритмом на известном ключе. При использовании простого логина, пароль пользователя может быть перехвачен и дешифрирован.
-    </div>
+	<!-- =footer -->
+	<footer class="footer">
+		RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+	</footer>
+	<!-- =/footer -->
 </div>
 
-<!-- =footer -->
-<footer class="footer">
-</footer>
-<!-- =/footer -->
-
-
 <div id="outdated"></div>
-
 
 <script src="/js/engine.js"></script>
 </body>
