--- a/app/homepage.html
+++ b/app/homepage.html
@@ -30,62 +30,60 @@
 </head>
 <body>
 
-<div class="container">
+<div class="grid homepage">
 	<!-- =header -->
     <header class="header">
-
-		<!-- =nav -->
-		<nav id="navbar" class="mainnav">
-			<div class="mainnav__list">
-				<ul class="nav nav-tabs mainnav">
-					<li class="folder"> 
-						<a href="#">Меню 1</a>
-						<div class="subnav">
-							<ul>
-								<li><a href="#">Меню 1</a></li>
-								<li><a href="#">Меню 2</a></li>
-								<li><a href="#">Меню 3</a></li>
-								<li><a href="#">Меню 4</a></li>
+    	<div class="container">
+    		<div class="header__inner d-flex align-items-center">
+		    	<div class="col-8 d-flex align-items-center">
+			    	<div class="logo">
+			    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
+			    	</div>
+					<!-- =nav -->
+					<nav id="navbar">
+						<div class="mainnav__list">
+							<ul class="nav nav-tabs mainnav d-flex">
+								<li><a href="#" title="">COMPANY</a></li>
+								<li><a href="#" title="">PRODUCTS</a></li>
+								<li><a href="#" title="">CATALOGUE</a></li>
+								<li><a href="#" title="">Did you know?</a></li>
+								<li><a href="#" title="">Contact us</a></li>
 							</ul>
 						</div>
-					</li>
-					<li class="folder">
-						<a href="#">Меню 2</a>
-						<div class="subnav">
-							<ul>
-								<li><a href="#">Меню 1</a></li>
-								<li><a href="#">Меню 2</a></li>
-								<li><a href="#">Меню 3</a></li>
-								<li><a href="#">Меню 4</a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#">Меню 3</a></li>
-					<li><a href="#">Меню 4</a></li>
-					<li><a href="#">Меню 5</a></li>
-				</ul>
-				<div class="show-sm">
-					<a href="tel:+123456789">+1234 56-78-89</a>
-					<a href="mailto:info@transliftrus.ru">info@site.site</a>
-				</div>
-			</div>
-		</nav>
-
-		<button type="button" class="navbar-toggle" aria-label="Показать/Скрыть меню">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<button type="button" class="close-menu"><img src="/template/images/close.png" alt="Закрыть меню" /></button>
-		<!-- =/nav -->
-
+					</nav>
+					<!-- =/nav -->
+		    	</div>
+		    	<div class="col-1">
+					<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
+		    	</div>
+		    	<div class="col-1">
+					<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
+						<span class="icon-bar icon-bar-full"></span>
+						<span class="icon-bar icon-bar-left"></span>
+						<span class="icon-bar icon-bar-right"></span>
+					</button>
+		    	</div>
+    		</div>
+    	</div>
 	</header>
 	<!-- =/header -->
 
+	<div class="main"></div>
+	
 
 	<!-- =footer -->
 	<footer class="footer">
-		RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+		<div class="container">
+			<div class="footer__inner d-flex align-items-center">
+				<div class="copyright flex-grow-1 d-flex align-items-center">
+					<img src="images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+				</div>
+				<div class="lang">
+					<span class="current">Eng</span>
+					<a href="#">Jpn</a>
+				</div>
+			</div>
+		</div>
 	</footer>
 	<!-- =/footer -->
 </div>
