Подлкючены шрифты proxima

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -56,7 +56,7 @@
 		    	<div class="col-1">
 					<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
 		    	</div>
-		    	<div class="col-1">
+		    	<div class="col-1 d-flex justify-content-end">
 					<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
 						<span class="icon-bar icon-bar-full"></span>
 						<span class="icon-bar icon-bar-left"></span>
