--- a/app/homepage.html
+++ b/app/homepage.html
@@ -58,9 +58,9 @@
 		    	</div>
 		    	<div class="col-1 d-flex justify-content-end">
 					<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
-						<span class="icon-bar icon-bar-full"></span>
-						<span class="icon-bar icon-bar-left"></span>
-						<span class="icon-bar icon-bar-right"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
 		    	</div>
     		</div>
