добавлен интро блок на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -68,7 +68,18 @@
 	</header>
 	<!-- =/header -->
 
-	<div class="main"></div>
+	<div class="main">
+		<div class="container">
+			<div class="d-flex align-items-center">
+				<div class="intro">
+					<h1 class="visually-hidden">Brake & Clutch Parts</h1>
+					<img src="images/pic.png" alt="" />
+					<p>The fastest must be <strong>brakes</strong>.</p>
+					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 
 	<!-- =footer -->
