Добавлена анимация диска на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -77,6 +77,9 @@
 					<p>The fastest must be <strong>brakes</strong>.</p>
 					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
 				</div>
+				<div class="main-pic">
+					<img src="images/disc.png" alt="" />
+				</div>
 			</div>
 		</div>
 	</div>
