добавлен slick слайдер на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -69,16 +69,38 @@
 	<!-- =/header -->
 
 	<div class="main">
-		<div class="container">
-			<div class="d-flex align-items-center">
-				<div class="intro">
-					<h1 class="visually-hidden">Brake & Clutch Parts</h1>
-					<img src="images/pic.png" alt="" />
-					<p>The fastest must be <strong>brakes</strong>.</p>
-					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
-				</div>
-				<div class="main-pic">
-					<img src="images/disc.png" alt="" />
+		<div class="content d-flex align-items-center">
+			<div class="intro">
+				<h1 class="visually-hidden">Brake & Clutch Parts</h1>
+				<img src="images/pic.png" alt="" />
+				<p>The fastest must be <strong>brakes</strong>.</p>
+				<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
+			</div>
+			<div class="main-pic">
+				<img src="images/disc.png" alt="" />
+			</div>
+			<div class="right" >
+				<div class="new-title"><img src="images/news.png" alt="News" /></div>
+				<div class="prevnext"></div>
+				<div class="" id="news-carousel">
+					<div>
+						<div class="news-slide">
+							<a href="#">
+								<img src="tmp/new-1.jpg" alt="" />
+								<h3>AUTOMECHANIKA DUBAI 2018</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+							</a>
+						</div>
+					</div>
+					<div>
+						<div class="news-slide">
+							<a href="#">
+								<img src="tmp/new-2.jpg" alt="" />
+								<h3>MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
+								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>							
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -103,7 +125,7 @@
 </div>
 
 <div id="outdated"></div>
-
+<script src="/js/slick.min.js"></script> 
 <script src="/js/engine.js"></script>
 </body>
 </html>
