Добавлено боковое меню callback

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -30,102 +30,163 @@
 </head>
 <body>
 
-<div class="grid homepage">
-	<!-- =header -->
-    <header class="header">
-    	<div class="container">
-    		<div class="header__inner d-flex align-items-center">
-		    	<div class="col-8 d-flex align-items-center">
-			    	<div class="logo">
-			    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
+<div class="body">
+	<div class="grid homepage">
+		<!-- =header -->
+		<header class="header">
+	    	<div class="container">
+	    		<div class="header__inner d-flex align-items-center">
+			    	<div class="col-8 d-flex align-items-center">
+				    	<div class="logo">
+				    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
+				    	</div>
+						<!-- =nav -->
+						<nav id="navbar">
+							<div class="mainnav__list">
+								<ul class="nav nav-tabs mainnav d-flex">
+									<li><a href="#" title="">COMPANY</a></li>
+									<li><a href="#" title="">PRODUCTS</a></li>
+									<li><a href="#" title="">CATALOGUE</a></li>
+									<li><a href="#" title="">Did you know?</a></li>
+									<li><a href="#" title="">Contact us</a></li>
+								</ul>
+							</div>
+						</nav>
+						<!-- =/nav -->
 			    	</div>
-					<!-- =nav -->
-					<nav id="navbar">
-						<div class="mainnav__list">
-							<ul class="nav nav-tabs mainnav d-flex">
-								<li><a href="#" title="">COMPANY</a></li>
-								<li><a href="#" title="">PRODUCTS</a></li>
-								<li><a href="#" title="">CATALOGUE</a></li>
-								<li><a href="#" title="">Did you know?</a></li>
-								<li><a href="#" title="">Contact us</a></li>
-							</ul>
-						</div>
-					</nav>
-					<!-- =/nav -->
-		    	</div>
-		    	<div class="col-1">
-					<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
-		    	</div>
-		    	<div class="col-1 d-flex justify-content-end">
-					<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-		    	</div>
-    		</div>
-    	</div>
-	</header>
-	<!-- =/header -->
+			    	<div class="col-1">
+						<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
+			    	</div>
+			    	<div class="col-1 d-flex justify-content-end">
+						<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+			    	</div>
+	    		</div>
+	    	</div>
+		</header>
+		<!-- =/header -->
 
-	<div class="main">
-		<div class="content d-flex align-items-center">
-			<div class="intro">
-				<h1 class="visually-hidden">Brake & Clutch Parts</h1>
-				<img src="images/pic.png" alt="" />
-				<p>The fastest must be <strong>brakes</strong>.</p>
-				<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
-			</div>
-			<div class="main-pic">
-				<img src="images/disc.png" alt="" />
-			</div>
-			<div class="right" >
-				<div class="new-title"><img src="images/news.png" alt="News" /></div>
-				<div class="prevnext"></div>
-				<div class="" id="news-carousel">
-					<div>
-						<div class="news-slide">
-							<a href="#">
-								<img src="tmp/new-1.jpg" alt="" />
-								<h3>AUTOMECHANIKA DUBAI 2018</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-							</a>
+		<div class="main">
+			<div class="content d-flex align-items-center">
+				<div class="intro">
+					<h1 class="visually-hidden">Brake & Clutch Parts</h1>
+					<img src="images/pic.png" alt="" />
+					<p>The fastest must be <strong>brakes</strong>.</p>
+					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
+				</div>
+				<div class="main-pic">
+					<img src="images/disc.png" alt="" />
+				</div>
+				<div class="right" >
+					<div class="new-title"><img src="images/news.png" alt="News" /></div>
+					<div class="prevnext"></div>
+					<div class="" id="news-carousel">
+						<div>
+							<div class="news-slide">
+								<a href="#">
+									<img src="tmp/new-1.jpg" alt="" />
+									<h3>AUTOMECHANIKA DUBAI 2018</h3>
+									<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+								</a>
+							</div>
 						</div>
-					</div>
-					<div>
-						<div class="news-slide">
-							<a href="#">
-								<img src="tmp/new-2.jpg" alt="" />
-								<h3>MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>							
-							</a>
+						<div>
+							<div class="news-slide">
+								<a href="#">
+									<img src="tmp/new-2.jpg" alt="" />
+									<h3>MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
+									<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>							
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		
+
+		<!-- =footer -->
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__inner d-flex align-items-center">
+					<div class="copyright flex-grow-1 d-flex align-items-center">
+						<img src="images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+					</div>
+					<div class="lang">
+						<span class="current">Eng</span>
+						<a href="#">Jpn</a>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<!-- =/footer -->
 	</div>
 	
-
-	<!-- =footer -->
-	<footer class="footer">
-		<div class="container">
-			<div class="footer__inner d-flex align-items-center">
-				<div class="copyright flex-grow-1 d-flex align-items-center">
-					<img src="images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
-				</div>
-				<div class="lang">
-					<span class="current">Eng</span>
-					<a href="#">Jpn</a>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- =/footer -->
 </div>
+
+<!-- =modal callback -->
+<div class="modal-callback sidemodal" id="modal-callback" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="inner" role="document">
+		<p class="title">CALL BACK</p>
+
+		<form action="#" method="post" class="callback__form">
+			<fieldset>
+				<div class="select-wrapper">
+					<select name="reviewobject" class="reviewobject" id="selectreview" placeholder="Country">
+						<option value="Autstralia">Autstralia</option>
+						<option value="Albania">Albania</option>
+						<option value="Angola">Angola</option>
+						<option value="Armenia">Armenia</option>
+						<option value="Russia">Russia</option>
+						<option value="Spain">Spain</option>
+						<option value="Japan">Japan</option>
+						<option value="USA">USA</option>
+						<option value="Ukraine">Ukraine</option>
+						<option value="New zeland">New zeland</option>
+					</select>
+				</div>
+				<div class="input-field">
+					<label for="mcallback_name" class="name-field">Your Name</label>
+					<label for="mcallback_name" class="helper-field helper-field-name">Your Name</label>
+					<input type="email" id="mcallback_name" name="name" class="form-control required" value="">
+				</div>
+				<div class="input-field">
+					<label for="mcallback_tel" class="name-field">Your Phone</label>
+					<label for="mcallback_tel" class="helper-field helper-field-name">Your Phone</label>
+					<input type="tel" id="mcallback_tel" name="tel" class="form-control tel required" value="">
+				</div>
+				<div class="input-field textarea-field">
+					<label for="mcallback_msg" class="name-field">Your Enquiry</label>
+					<label for="mcallback_msg" class="helper-field helper-field-msg">Your Enquiry</label>
+					<textarea id="mcallback_msg" name="msg" class="form-control textarea required"></textarea>
+				</div>
+
+				<div class="captcha">
+					<img src="tmp/captcha.jpg" alt="" />
+				</div>
+
+				<button type="submit" class="submit btn btn-black"><span>Continue</span></button>
+			</fieldset>
+		</form>
+		<button type="button" data-dismiss="modal" class="close-modal" aria-label="Close">
+			<svg width="24" height="24">
+				<line x1="0" y1="0" x2="24" y2="24"/>
+				<line x1="24" y1="0" x2="0" y2="24"/>
+			</svg>
+		</button>
+	</div>
+</div>
+<!-- =/modal callback -->
+
 
 <div id="outdated"></div>
 <script src="/js/slick.min.js"></script> 
+<script src="/js/selectize.min.js"></script>
 <script src="/js/engine.js"></script>
+
+<link rel="stylesheet" property="stylesheet" href="/css/selectize.css" /> 
 </body>
 </html>
