Добавлены вертикальные линии, фоновый треугольник справа на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -30,8 +30,8 @@
 </head>
 <body>
 
-<div class="body">
-	<div class="grid homepage">
+<div class="body homepage">
+	<div class="grid">
 		<!-- =header -->
 		<header class="header">
 	    	<div class="container">
