Добавлен эффект перересчета цифр на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -103,6 +103,11 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="counter">
+						<div class="cifr"><span data-number="5643">5643</span></div>
+						<p>SB Nagamochi produces</p>
+					</div>
 				</div>
 			</div>
 		</div>
