Добавлено всплывающее меню

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -58,7 +58,7 @@
 						<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
 			    	</div>
 			    	<div class="col-1 d-flex justify-content-end">
-						<button type="button" class="extra-toggle btn-animate" data-popup="modal-menu" aria-label="Show / hide menu">
+						<button type="button" class="extra-toggle" data-popup="modal-menu" aria-label="Show / hide menu">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -185,6 +185,72 @@
 	</div>
 </div>
 <!-- =/modal callback -->
+
+<!-- =modal menu -->
+<div class="modal-menu" id="modal-menu" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="inner" role="document">
+		<div class="container">
+			<div class="row">
+				<div class="menu d-flex">
+					<div class="col cell">
+						<dl>
+							<dt>COMPANY</dt>
+							<dd><a href="#" title="">About Us</a></dd>
+							<dd><a href="#" title="">Materials & Technologies</a></dd>
+							<dd><a href="#" title="">Certificates & Warranty</a></dd>
+							<dd><a href="#" title="">News & Exhibitions</a></dd>
+						</dl>
+					</div>
+					<div class="col cell">
+						<dl>
+							<dt>PRODUCTS</dt>
+							<dd><a href="#" title="">Brake pads & shoes</a></dd>
+							<dd><a href="#" title="">Rotor discs</a></dd>
+							<dd><a href="#" title="">Cylinders</a></dd>
+							<dd><a href="#" title="">Brake & clutch hoses</a></dd>
+							<dd><a href="#" title="">Brake calipers kit </a></dd>
+						</dl>
+					</div>
+					<div class="col cell">
+						<p class="title title-mb"><a href="#" title="#">CATALOGUE</a></p>
+						<p class="title title-mb"><a href="#" title="#">Did you know?</a></p>
+						<p class="title title-mb"><a href="#" title="#">Contact us</a></p>
+						<div class="lang">
+							Language <span class="current">Eng</span>   <a href="#">Jpn</a>
+						</div>
+					</div>
+					<div class="col contacts">
+						<div class="contacts__inner">
+							<p class="title">RMP NAGAMOCHI <br>Technology <br>Japan Co., Ltd.</p>
+							<div class="address">
+								<p>1-6-26 Ace Building 601, Higashi-Benzai, Asaka-shi, Saitama 351-0022, Japan	</p>
+							</div>
+							<div class="contacts__cell">
+								<p>Tel</p>
+								<a href="tel:+81484869173" title="" class="tel">+81 48-486-9173</a>
+							</div>
+							<div class="contacts__cell">
+								<p>Fax</p>
+								<a href="tel:+81484869173" title="" class="tel">+81 48-486-9203</a>
+							</div>
+							<div class="contacts__cell">
+								<p>E-mail</p>
+								<a href="mailto:enquiry@sbparts.jp" class="email">enquiry@sbparts.jp</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<button type="button" data-dismiss="modal" class="close-modal" aria-label="Закрыть">
+					<svg width="24" height="24">
+						<line x1="0" y1="0" x2="24" y2="24"/>
+						<line x1="24" y1="0" x2="0" y2="24"/>
+					</svg>
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- =/modal menu -->
 
 
 <div id="outdated"></div>
