изменено структура правого темного угла на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -111,7 +111,6 @@
 				</div>
 			</div>
 		</div>
-		
 
 		<!-- =footer -->
 		<footer class="footer">
@@ -128,8 +127,8 @@
 			</div>
 		</footer>
 		<!-- =/footer -->
+		<div class="angle"></div>	
 	</div>
-	
 </div>
 
 <!-- =modal callback -->
