--- a/app/homepage.html
+++ b/app/homepage.html
@@ -78,7 +78,7 @@
 					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
 				</div>
 				<div class="main-pic">
-					<img src="images/disc.png" alt="" />
+					<!-- <img src="images/disc.png" alt="" /> -->
 				</div>
 				<div class="right" >
 					<div class="new-title"><img src="images/news.png" alt="News" /></div>
@@ -250,11 +250,12 @@
 	</div>
 </div>
 <!-- =/modal menu -->
-
+ 
 
 <div id="outdated"></div>
 <script src="/js/slick.min.js"></script> 
 <script src="/js/selectize.min.js"></script>
+<script src="/js/jquery.parallax-0.2-min.js"></script>
 <script src="/js/engine.js"></script>
 
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" /> 
