Добавлен nicescroll для стилизации скролов

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -256,6 +256,7 @@
 <script src="/js/slick.min.js"></script> 
 <script src="/js/selectize.min.js"></script>
 <script src="/js/jquery.parallax-0.2-min.js"></script>
+<script src="/js/jquery.nicescroll.min.js"></script>
 <script src="/js/engine.js"></script>
 
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" /> 
