--- a/app/new.html
+++ b/app/new.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru"><!-- InstanceBegin template="/Templates/news.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -10,14 +10,14 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <meta name="robots" content="noindex,nofollow" />
-<!-- TemplateBeginEditable name="doctitle" -->
-<title>Новости</title>
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" -->
+<title>Новость</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
 
 
-<link rel="stylesheet" href="../outdatedbrowser/outdatedbrowser.min.css" />
+<link rel="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 <script src="/outdatedbrowser/detect.js"></script>
 
@@ -25,8 +25,8 @@
 <script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
 <!--<![endif]-->
 
-<!-- TemplateBeginEditable name="head" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -38,7 +38,7 @@
 	    		<div class="header__inner d-flex align-items-center">
 			    	<div class="col-8 d-flex align-items-center">
 				    	<div class="logo">
-				    		<a href="/"><img src="../images/logo.png" alt="SB NAGAMOCHI" /></a>
+				    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
 				    	</div>
 						<!-- =nav -->
 						<nav id="navbar">
@@ -46,9 +46,9 @@
 								<ul class="nav nav-tabs mainnav d-flex">
 									<li class="active"><span>COMPANY</span></li>
 									<li><a href="#" title="">PRODUCTS</a></li>
-									<li><a href="../catalog.html" title="">CATALOGUE</a></li>
+									<li><a href="catalog.html" title="">CATALOGUE</a></li>
 									<li><a href="#" title="">Did you know?</a></li>
-									<li><a href="../contacts.html" title="">Contact us</a></li>
+									<li><a href="contacts.html" title="">Contact us</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -88,8 +88,104 @@
 		<!-- =main -->
 		<div class="main">
 			<div class="container">
-			<!-- TemplateBeginEditable name="EditRegion3" -->
-			<!-- TemplateEndEditable -->
+			<!-- InstanceBeginEditable name="EditRegion3" -->
+				<div class="back col-offset-1"><a href="news.html" title="" class="back__link">Back</a></div>
+				<div class="d-flex">
+					<div class="content col-offset-1 col-5">
+						<main>
+							<h1>THE ATTACKS OF ROTORS AND SCORCHING PROCESS</h1>
+
+							<p style="margin-bottom: 0; font-size: 20px;">Its when the rotor material "attacks" brake pad surface.</p>
+
+							<h3 style="font-size: 20px">Characteristic damages:</h3>
+							<br>
+							<img src="/tmp/image1.jpg" alt="" />
+							<p>In normal braking process the brake pad material travels to rotor surface to create the friendly braking layer. <a href="#" title="">The hardness is most</a> important (but not the only) physical property is responsible for this process. SAE J431 G3000 standards for the automotive brake rotor and drum includes Hardness range by Barinell from 187 to 241. (See below Rotors material quality) </p>
+
+							<p>Non abrasive Ceramic Brake pads are more susceptible to low hardness compared to relatively soft metallic brake pad formulation. The hardness for Ceramic pad should stay above 220 by Brinell scale. For example, most of OEM rotors are produced with hardness above 240 by Brinell. But, unfortunately, aftermarket rotors have hardness well below it.</p>
+
+							<img src="/tmp/image2.jpg" alt="" class="justifyleft" />
+							<p>The scorching heats the matrix of the friction material to 600-700°C, allowing carbonization to occur to the first 0.5 to 1.5mm of brake pad surface.  It is good prevention against rotors attack for aftermarket rotors which is normally produced with Hardness 170-200. Besides, it reduce the bedding-in time on replacement brake pads to a minimum with ready to use soft carbonization layer.</p>
+
+							<p>Here is the same formula appearance with and without scorching.</p>
+
+							<h2>ROTORS MATERIAL QUALITY.</h2>
+							<p>Rotors are usually made of gray iron due to its superior heat handling and damping (vibration absorption) character. The quality are depends on combination of Physical properties, Chemical composition and Inferior microstructure.</p>
+
+							<h5>Physical properties</h5>
+							<p>Specified by SAE J431 G3000 standards for the automotive brake rotor and drum includes:</p>
+							<ol>
+								<li>Hardness by Barinell: 187-241, </li>
+								<li>Minimum tensile strength of 30,000 psi</li>
+							</ol>
+
+							<h5>Chemical composition G3000 gray iron:</h5>
+							<ul>
+								<li>Carbon 3.10%-3.40%, </li>
+								<li>Silicon 1.90%-2.30%, </li>
+								<li>Manganese 0.60%-0.90%, </li>
+								<li>Sulfur Max 0.15%, </li>
+								<li>Phosphorus Max 0.15%, </li>
+								<li style="color: #00b4a9"><strong>Total Carbon equivalent of 3.9%-4.15</strong></li>
+							</ul>
+
+							<h5>Physical properties</h5>
+							<img src="/tmp/image3.jpg" alt="" class="justifyright" />
+							<p>Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite. Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.</p>
+
+							<h3>RANGE OF FRICTION MATERIALS USED BY SB NAGAMOCHI BRAKE PADS INCLUDES:</h3>
+							<table width="100%">
+								<tr>
+									<th>C63</th>
+									<th>C02</th>
+									<th>C13</th>
+									<th>E3</th>
+									<th>M75</th>
+								</tr>
+								<tr>
+									<td>Ceramic for small cars</td>
+									<td>Ceramic for small cars</td>
+									<td>Ceramic for 4WD / Pick ups / Vans</td>
+									<td>Ceramic for 4WD / Pick ups / Vans</td>
+									<td>Low metalic for small EURO cars</td>
+								</tr>
+								<tr>
+									<td>Ceramic for small cars</td>
+									<td>Ceramic for small cars</td>
+									<td>Ceramic for 4WD / Pick ups / Vans</td>
+									<td>Ceramic for 4WD / Pick ups / Vans</td>
+									<td>Low metalic for small EURO cars</td>
+								</tr>
+							</table>
+
+
+							<h4>HEADLINE LEVEL 4</h4>
+							<blockquote>Some important information must be visible! Some important information must be visible! </blockquote>
+
+
+						</main>
+					</div>
+					<aside class="col-offset-1 col-3">
+						<section class="more-list">
+							<header>
+								<h1>Read more</h1>
+							</header>
+							<article class="more__item">
+								<h3 class="more__title"><a href="#" title="">Tips on installation and brake pads rating</a></h3>
+								<p>Changing Brake Pads is simple. But there are some important considerations sometimes missed by installers.</p>
+							</article>
+							<article class="more__item">
+								<h3 class="more__title"><a href="#" title="">How to rate your new brake pads</a></h3>
+								<p>But there are some important considerations sometimes missed by installers.</p>
+							</article>
+							<article class="more__item">
+								<h3 class="more__title"><a href="#" title="">WHEN BRAKE PAD MEETS THE ROTOR</a></h3>
+								<p>The first mating process of rotor and pad surfaces play a vital role for their future life and performance. It’s also called BED-IN process.</p>
+							</article>
+						</section>
+					</aside>
+				</div>
+			<!-- InstanceEndEditable -->
 			</div>
 		</div>
 		<!-- =/main -->
@@ -99,7 +195,7 @@
 			<div class="container">
 				<div class="footer__inner d-flex align-items-center">
 					<div class="copyright flex-grow-1 d-flex align-items-center">
-						<img src="../images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
+						<img src="images/rmp.png" alt="" /> RMP NAGAMOCHI TECHNOLOGY CO., JAPAN © 2003 to 2018
 					</div>
 					<div class="lang">
 						<span class="current">Eng</span>
@@ -150,7 +246,7 @@
 				</div>
 
 				<div class="captcha">
-					<img src="../tmp/captcha.jpg" alt="" />
+					<img src="tmp/captcha.jpg" alt="" />
 				</div>
 
 				<button type="submit" class="submit btn btn-black"><span>Continue</span></button>
@@ -239,7 +335,7 @@
 <script src="/js/jquery.nicescroll.min.js"></script>
 <script src="/js/engine.js"></script>
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
-<!-- TemplateBeginEditable name="EditRegion4" -->
-<!-- TemplateEndEditable -->
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- InstanceEndEditable -->
 </body>
-</html>
+<!-- InstanceEnd --></html>
