--- a/app/news.html
+++ b/app/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru"><!-- InstanceBegin template="/Templates/news.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="" />
@@ -10,8 +10,9 @@
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 <meta name="robots" content="noindex,nofollow" />
-
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Новости</title>
+<!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
 
@@ -24,9 +25,8 @@
 <script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
 <!--<![endif]-->
 
-<!--[if IE]>
-	<link href="/css/styles-ie.css" rel="stylesheet" type="text/css" />
-<![endif]-->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
 </head>
 <body>
 
@@ -44,11 +44,11 @@
 						<nav id="navbar">
 							<div class="mainnav__list">
 								<ul class="nav nav-tabs mainnav d-flex">
-									<li><a href="#" title="">COMPANY</a></li>
+									<li class="active"><span>COMPANY</span></li>
 									<li><a href="#" title="">PRODUCTS</a></li>
-									<li><a href="#" title="">CATALOGUE</a></li>
+									<li><a href="catalog.html" title="">CATALOGUE</a></li>
 									<li><a href="#" title="">Did you know?</a></li>
-									<li><a href="#" title="">Contact us</a></li>
+									<li><a href="contacts.html" title="">Contact us</a></li>
 								</ul>
 							</div>
 						</nav>
@@ -86,107 +86,109 @@
 		<!-- =/neck -->
 
 		<!-- =main -->
-		<main class="main">
+		<div class="main">
 			<div class="container">
-				<section class="content col-offset-1">
-					<header>
-						<h1>NEWS</h1>						
-					</header>
+			<!-- InstanceBeginEditable name="EditRegion3" -->
+			<section class="content col-offset-1">
+				<header>
+					<h1>NEWS</h1>						
+				</header>
 
-					<!-- =list news -->
-					<div class="list-news d-flex flex-wrap">
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-11.jpg" alt="" />									
-								</div>
-								<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-							</a>
-						</article>
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-12.jpg" alt="" />									
-								</div>
-								<h3 class="new__title">NEW friction formula!</h3>
-								<p>SB Nagamochi is testing new materials for brake pads</p>
-							</a>
-						</article>
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-13.jpg" alt="" />									
-								</div>
-								<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-							</a>
-						</article>	
+				<!-- =list news -->
+				<div class="list-news d-flex flex-wrap">
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-11.jpg" alt="" />									
+							</div>
+							<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
+							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+						</a>
+					</article>
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-12.jpg" alt="" />									
+							</div>
+							<h3 class="new__title">NEW friction formula!</h3>
+							<p>SB Nagamochi is testing new materials for brake pads</p>
+						</a>
+					</article>
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-13.jpg" alt="" />									
+							</div>
+							<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
+							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+						</a>
+					</article>	
 
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-14.jpg" alt="" />
-								</div>
-								<h3 class="new__title">AUTOMECHANIKA MEXICO</h3>
-								<p>Booth 3820, 10-12 Jul 2013, Centro Banamex, Mexico</p>
-							</a>
-						</article>
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-15.jpg" alt="" />
-								</div>
-								<h3 class="new__title">MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
-								<p>Booth M-7, Tatmadaw Hall, Yangon Conventional, Myanmar</p>
-							</a>
-						</article>
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-16.jpg" alt="" />									
-								</div>
-								<h3 class="new__title">PhilAuto 2014 Manila 29 - 31 May, 2014</h3>
-								<p>JNBK Corp. presents its 3 brands including SB NagamochiSB Nagamochi is testing new materials for brake pads</p>
-							</a>
-						</article>	
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-14.jpg" alt="" />
+							</div>
+							<h3 class="new__title">AUTOMECHANIKA MEXICO</h3>
+							<p>Booth 3820, 10-12 Jul 2013, Centro Banamex, Mexico</p>
+						</a>
+					</article>
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-15.jpg" alt="" />
+							</div>
+							<h3 class="new__title">MOTOR SHOW 2013, YANGON MYANMAR, 15-18 MARCH 2013AUTOMECHANIKA DUBAI 2018</h3>
+							<p>Booth M-7, Tatmadaw Hall, Yangon Conventional, Myanmar</p>
+						</a>
+					</article>
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-16.jpg" alt="" />									
+							</div>
+							<h3 class="new__title">PhilAuto 2014 Manila 29 - 31 May, 2014</h3>
+							<p>JNBK Corp. presents its 3 brands including SB NagamochiSB Nagamochi is testing new materials for brake pads</p>
+						</a>
+					</article>	
 
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-17.jpg" alt="" />
-								</div>
-								<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-							</a>
-						</article>
-						<article class="new__item">
-							<a href="#" title="" class="new__link">
-								<div class="new__thumb">
-									<img src="tmp/new-18.jpg" alt="" />									
-								</div>
-								<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
-								<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
-							</a>
-						</article>											
-					</div>
-					<!-- =/list news -->
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-17.jpg" alt="" />
+							</div>
+							<h3 class="new__title">AUTOMECHANIKA DUBAI 2014, JUNE 3 – 5</h3>
+							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+						</a>
+					</article>
+					<article class="new__item">
+						<a href="new.html" title="" class="new__link">
+							<div class="new__thumb">
+								<img src="tmp/new-18.jpg" alt="" />									
+							</div>
+							<h3 class="new__title">AUTOMECHANIKA DUBAI 2018</h3>
+							<p>JNBK Corp. presents its 3 brands including SB Nagamochi</p>
+						</a>
+					</article>											
+				</div>
+				<!-- =/list news -->
 
-					<!-- =pagination -->
-					<div class="pagination">
-						<a href="#" class="prev">Back</a>
-						<span class="current">1</span>
-						<a href="#" title="">2</a>
-						<a href="#" title="">3</a>
-						<a href="#" title="">4</a>
-						<!-- <span class="separator">...</span> -->
-						<a href="#" title="">5</a>
-						<a href="#" class="next">Next</a>
-					</div>
-					<!-- =/pagination -->
-				</section>
+				<!-- =pagination -->
+				<div class="pagination">
+					<a href="#" class="prev">Back</a>
+					<span class="current">1</span>
+					<a href="#" title="">2</a>
+					<a href="#" title="">3</a>
+					<a href="#" title="">4</a>
+					<!-- <span class="separator">...</span> -->
+					<a href="#" title="">5</a>
+					<a href="#" class="next">Next</a>
+				</div>
+				<!-- =/pagination -->
+			</section>
+			<!-- InstanceEndEditable -->
 			</div>
-		</main>
+		</div>
 		<!-- =/main -->
 
 		<!-- =footer -->
@@ -333,7 +335,8 @@
 <script src="/js/selectize.min.js"></script>
 <script src="/js/jquery.nicescroll.min.js"></script>
 <script src="/js/engine.js"></script>
-
-<link rel="stylesheet" property="stylesheet" href="/css/selectize.css" /> 
+<link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
+<!-- InstanceBeginEditable name="EditRegion4" -->
+<!-- InstanceEndEditable -->
 </body>
-</html>
+<!-- InstanceEnd --></html>
