--- a/app/new.html
+++ b/app/new.html
@@ -97,20 +97,27 @@
 
 							<p style="margin-bottom: 0; font-size: 20px;">Its when the rotor material "attacks" brake pad surface.</p>
 
-							<h3 style="font-size: 20px">Characteristic damages:</h3>
+							<p style="font-size: 20px; color: #fff"><strong>Characteristic damages:</strong></p>
 							<br>
 							<img src="/tmp/image1.jpg" alt="" />
+
+							<br>
 							<p>In normal braking process the brake pad material travels to rotor surface to create the friendly braking layer. <a href="#" title="">The hardness is most</a> important (but not the only) physical property is responsible for this process. SAE J431 G3000 standards for the automotive brake rotor and drum includes Hardness range by Barinell from 187 to 241. (See below Rotors material quality) </p>
+							<br> 
 
 							<p>Non abrasive Ceramic Brake pads are more susceptible to low hardness compared to relatively soft metallic brake pad formulation. The hardness for Ceramic pad should stay above 220 by Brinell scale. For example, most of OEM rotors are produced with hardness above 240 by Brinell. But, unfortunately, aftermarket rotors have hardness well below it.</p>
+							<br>
 
 							<img src="/tmp/image2.jpg" alt="" class="justifyleft" />
 							<p>The scorching heats the matrix of the friction material to 600-700°C, allowing carbonization to occur to the first 0.5 to 1.5mm of brake pad surface.  It is good prevention against rotors attack for aftermarket rotors which is normally produced with Hardness 170-200. Besides, it reduce the bedding-in time on replacement brake pads to a minimum with ready to use soft carbonization layer.</p>
+							<br>
 
 							<p>Here is the same formula appearance with and without scorching.</p>
+							<br>
 
 							<h2>ROTORS MATERIAL QUALITY.</h2>
 							<p>Rotors are usually made of gray iron due to its superior heat handling and damping (vibration absorption) character. The quality are depends on combination of Physical properties, Chemical composition and Inferior microstructure.</p>
+							<br>
 
 							<h5>Physical properties</h5>
 							<p>Specified by SAE J431 G3000 standards for the automotive brake rotor and drum includes:</p>
@@ -128,10 +135,12 @@
 								<li>Phosphorus Max 0.15%, </li>
 								<li style="color: #00b4a9"><strong>Total Carbon equivalent of 3.9%-4.15</strong></li>
 							</ul>
+							<br>
 
 							<h5>Physical properties</h5>
 							<img src="/tmp/image3.jpg" alt="" class="justifyright" />
 							<p>Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite. Pearlitic microstructure = the graphite distribution and matrix structure of the cast iron. This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.  This matrix should be predominantly pearlite, with not more than 5% ferrite and less than 1% cementite.</p>
+							<br>
 
 							<h3>RANGE OF FRICTION MATERIALS USED BY SB NAGAMOCHI BRAKE PADS INCLUDES:</h3>
 							<table width="100%">
